# backend/app/Modules/Users/routes.php
@@ -7,6 +7,7 @@ use Modules\Users\Http\Controllers\MeController;
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/api/me', MeController::class);
+    Route::get('/api/me/settings/stream', [MeController::class, 'streamSettings']);
     Route::patch('/api/me', [MeController::class, 'updateProfile']);
     Route::patch('/api/me/settings', [MeController::class, 'updateSettings']);
     Route::patch('/api/me/password', [MeController::class, 'updatePassword']);
